417133 - WebSocket / deflate-frame should accumulate decompress byte buffers properly
+ Adding ByteAccumulator to make job easier and more sane (with a
  minimum of byte buffer copying.

--- a/jetty-websocket/websocket-server/src/test/resources/browser-debug-tool/index.html
+++ b/jetty-websocket/websocket-server/src/test/resources/browser-debug-tool/index.html
@@ -16,6 +16,7 @@
       <input id="manythreads" class="button" type="submit" name="many" value="manythreads" disabled="disabled"/>
       <input id="hello" class="button" type="submit" name="hello" value="hello" disabled="disabled"/>
       <input id="there" class="button" type="submit" name="there" value="there" disabled="disabled"/>
+      <input id="json" class="button" type="submit" name="json" value="json" disabled="disabled"/>
     </div>
     <script type="text/javascript">
     $("connect").onclick = function(event) { wstool.connect(); return false; }
@@ -26,6 +27,11 @@
     $("manythreads").onclick = function(event) {wstool.write("manythreads:20,25,60"); return false; }
     $("hello").onclick = function(event) {wstool.write("Hello"); return false; }
     $("there").onclick = function(event) {wstool.write("There"); return false; }
+    $("json").onclick = function(event) {wstool.write("[{\"channel\":\"/meta/subscribe\",\"subscription\":\"/chat/demo\",\"id\":\"2\",\"clientId\":\"81dwnxwbgs0h0bq8968b0a0gyl\",\"timestamp\":\"Thu,"
+            + " 12 Sep 2013 19:42:30 GMT\"},{\"channel\":\"/meta/subscribe\",\"subscription\":\"/members/demo\",\"id\":\"3\",\"clientId\":\"81dwnxwbgs0h0bq8968b0a0gyl\",\"timestamp\":\"Thu,"
+            + " 12 Sep 2013 19:42:30 GMT\"},{\"channel\":\"/chat/demo\",\"data\":{\"user\":\"ch\",\"membership\":\"join\",\"chat\":\"ch"
+            + " has joined\"},\"id\":\"4\",\"clientId\":\"81dwnxwbgs0h0bq8968b0a0gyl\",\"timestamp\":\"Thu,"
+            + " 12 Sep 2013 19:42:30 GMT\"}]"); return false; }
     </script>
   </body>
 </html>
