--- a/tests/test-webapps/test-servlet-spec/test-spec-webapp/src/main/webapp/index.html
+++ b/tests/test-webapps/test-servlet-spec/test-spec-webapp/src/main/webapp/index.html
@@ -6,15 +6,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
   </HEAD>
 <BODY >
-<A HREF="http://www.eclipse.org/jetty"><IMG SRC="images/jetty_banner.gif"></A>
-
-<p>&nbsp;</p>
-  <a  href="http://localhost:8080/">Home</a>
-<center>
+  <A HREF="http://www.eclipse.org/jetty"><IMG SRC="images/jetty_banner.gif"></A>
+  <br/>
+  <b><a href="http://localhost:8080/">Demo Home</a></b>
   <hr/>
-  <span style="color:red; font-variant:small-caps; font-weight:bold">Test Web Application Only - Do NOT Deploy in Production</span>
-</center>
-<P>
+  <center><span style="color:red; font-variant:small-caps; font-weight:bold">Test Web Application Only - Do NOT Deploy in Production</span> </center>
+
 <h1>Servlet 3.1 Test WebApp</h1>
 
 <p>
