--- a/tests/test-webapps/test-jndi-webapp/src/main/webapp/index.html
+++ b/tests/test-webapps/test-jndi-webapp/src/main/webapp/index.html
@@ -6,32 +6,28 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
   </HEAD>
 <BODY>
-<A HREF="http://www.eclipse.org/jetty"><IMG SRC="images/jetty_banner.gif"></A>
-
-<p>&nbsp;</p>
-  <a  href="http://localhost:8080/">Home</a>
-<center>
+  <A HREF="http://www.eclipse.org/jetty"><IMG SRC="images/jetty_banner.gif"></A>
+  <br/>
+  <b><a href="http://localhost:8080/">Demo Home</a></b>
   <hr/>
- <span style="color:red; font-variant:small-caps; font-weight:bold">Test Web Application Only - Do NOT Deploy in Production</span>
-</center>
+  <center><span style="color:red; font-variant:small-caps; font-weight:bold">Test Web Application Only - Do NOT Deploy in Production</span> </center>
 
-<P>
 <h1>JNDI Test WebApp</h1>
 
 <p>
 This example shows how to configure and lookup resources such as DataSources, a JTA transaction manager and a java.mail.Session in JNDI. 
 </p>
 
-<h2>Preparation</h2>
-<p>
-To enable JNDI edit the start.ini or start.d/*.ini files to include "OPTIONS=jndi".
-</p>
-<p>
-For the jetty distribution demos, jndi is already enabled in the modules/demo.mod file and also enables various configurations in
-the demo directory which includes some mock resources used by the test.
-</p>
+  <h2>Preparation</h2>
+  <p>To enable JNDI in a base jetty instance do:
+    <pre>
+    $ cd $JETTY_BASE
+    $ java -jar $JETTY_HOME/start.jar --module-startd-ini=jndi
+    </pre>
+  </p>
+  <p>This will create a $JETTY_BASE/start.d/jndi.ini file to enable and parameterise JNDI.  If the --module-start-ini option instead, then the same initialisation will be appended to the
+  $JETTY_BASE/start.ini file instead. The jetty demo-base already has JNDI enabled in the start.ini file and some mock resources included.  </p>
 <p>The full source of this demonstration is available <a href="http://git.eclipse.org/c/jetty/org.eclipse.jetty.project.git/tree/tests/test-webapps/test-jndi-webapp">here</a>.</p>
-
 
 
 <h2>Execution</h2>
@@ -43,10 +39,8 @@ Click <code>Test</code> to check the runtime lookup of the JNDI resources.
 </form>
 
 
-<center>
   <hr/>
-  <a href="http://www.eclipse.org/jetty"><img style="border:0" src="images/small_powered_by.gif"/></a>
-</center>
+  <center> <a href="http://www.eclipse.org/jetty"><img style="border:0" src="images/small_powered_by.gif"/></a> </center>
 
 </BODY>
 </HTML>
